deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haxplore-deployment
  labels:
    app: haxplore
spec:
  replicas: 1  # Initial replica count
  selector:
    matchLabels:
      app: haxplore
  template:
    metadata:
      labels:
        app: haxplore
    spec:
      containers:
      - name: haxplore
        image: tanishqthakur/haxplore:latest # Replace with your Docker image
        ports:
        - containerPort: 3000
          # Replace with the actual API URL if needed
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
